# Node-Based-Image-Processing

./: CMakeLists.txt  README.md
.cache/clangd/index/: BlendNode.cpp.F1C04721D45ED2ED.idx  BlendNode.hpp.192358A4A5137475.idx  BlurNode.cpp.F77C8A0487B75A41.idx  BlurNode.hpp.BC0E12ED90DF5835.idx  BrightnessContrastNode.cpp.8796E139190C1051.idx  BrightnessContrastNode.hpp.7CA34217F567A2FB.idx  ColorChannelSplitterNode.cpp.D95222578608852D.idx  ColorChannelSplitterNode.hpp.3E1DE0937EB2451E.idx  ConvolutionFilterNode.cpp.883FDF0CF23D36DD.idx  ConvolutionFilterNode.hpp.2774394CBD6E80A1.idx  EdgeDetectionNode.cpp.12BA767F67700429.idx  EdgeDetectionNode.hpp.90D39613E6F8F478.idx  FastNoiseLite.h.9DF01DD59DD7BDE0.idx  ImageInputNode.cpp.86D34042C6FB0DD1.idx  ImageInputNode.hpp.C01BB54CEBCA67D2.idx  Node.hpp.FC5E668ACDA5E2FC.idx  NodeGraph.cpp.1C42B36A78237D9D.idx  NodeGraph.hpp.1463443AF9C4FD29.idx  NoiseGenerationNode.cpp.03CB5BB29B801981.idx  NoiseGenerationNode.hpp.0334DD082A2DB79E.idx  (+16 more)
libs/: glfw3.h
src/: main.cpp
src/graph/: Node.hpp  NodeGraph.cpp  NodeGraph.hpp
src/gui/: NodeGUIManager.cpp  NodeGUIManager.hpp
src/nodes/: BlendNode.cpp  BlendNode.hpp  BlurNode.cpp  BlurNode.hpp  BrightnessContrastNode.cpp  BrightnessContrastNode.hpp  ColorChannelSplitterNode.cpp  ColorChannelSplitterNode.hpp  ConvolutionFilterNode.cpp  ConvolutionFilterNode.hpp  EdgeDetectionNode.cpp  EdgeDetectionNode.hpp  ImageInputNode.cpp  ImageInputNode.hpp  NoiseGenerationNode.cpp  NoiseGenerationNode.hpp  OutputNode.cpp  OutputNode.hpp  ThresholdNode.cpp  ThresholdNode.hpp
